- Fixed bug #49081 (DateTime::diff() mistake if start in January and interval >   28 days). (Derick)